--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "private": false,
   "type": "module",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "author": "Vladislav Kovaliov",
   "email": "v.v.kovaliov@gmail.com",
   "homepage": "https://github.com/vladislavkovaliov/map#readme",
@@ -16,6 +16,8 @@
     "react-dom": ">= 16.3.0"
   },
   "devDependencies": {
-    "@types/react": "*"
+    "@types/react": "*",
+    "tsc": "^2.0.4",
+    "typescript": "^4.9.4"
   }
 }
