--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@vladislavkovaliov/map",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": false,
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "dist/cjs/index.js",
   "author": "Vladislav Kovaliov",
   "email": "v.v.kovaliov@gmail.com",
   "homepage": "https://github.com/vladislavkovaliov/map#readme",
+  "scripts": {
+    "rollup": "rollup -c"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vladislavkovaliov/map.git"
@@ -16,8 +19,20 @@
     "react-dom": ">= 16.3.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.5",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@types/react": "*",
+    "rollup": "^3.7.4",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "tsc": "^2.0.4",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.4"
-  }
+  },
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
