--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vladislavkovaliov/map",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": false,
   "type": "module",
   "main": "dist/cjs/index.js",
@@ -25,6 +25,7 @@
     "@types/react": "*",
     "rollup": "^3.7.4",
     "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "tsc": "^2.0.4",
     "tslib": "^2.4.1",
